<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.AZEM.diamonduc2.navigatorFragments.mainFragment"
    android:layout_centerVertical="true"
    android:layout_margin="@dimen/_7sdp"
    android:background="@drawable/button_black_new2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/insufficiencydiamonds"
        android:textColor="@color/white"
        android:id="@+id/t"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t"
        android:id="@+id/t2"
        android:text="@string/youdonthave"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_3sdp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_23sdp"
        android:layout_marginLeft="@dimen/_7sdp"
        android:background="@drawable/button5"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:padding="@dimen/_3sdp"
        android:layout_alignParentRight="true"
        android:text="@string/watchvideo"
        android:textColor="@color/white"
        android:id="@+id/notEnoughWatchVideo"
        android:layout_below="@+id/t2" />

    <Button
        android:layout_toLeftOf="@+id/notEnoughWatchVideo"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_23sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/button_black"
        android:text="@string/tasks"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_7sdp"
        android:id="@+id/notEnoughSeeTasks"
        android:layout_below="@+id/t2" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/progressBar"/>
</RelativeLayout>