<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.AZEM.crownuc.navigatorFragments.rewards"
    android:layout_centerVertical="true"
    android:layout_margin="@dimen/_7sdp"
    android:background="@drawable/button_black_new2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_7sdp"
        android:text="@string/Enterpubgid"
        android:textColor="@color/white"
        android:id="@+id/tDialoge"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tDialoge"
        android:id="@+id/idEditText"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:met_baseColor="@color/white"
        app:met_primaryColor="@color/white"
        app:met_textColorHint="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_7sdp"
        android:layout_below="@+id/idEditText"
        android:text="@string/EnterYourpubgusername"
        android:textColor="@color/white"
        android:id="@+id/t3"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t3"
        android:id="@+id/userNameEditText"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:met_baseColor="@color/white"
        app:met_primaryColor="@color/white"
        app:met_textColorHint="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameEditText"
        android:layout_marginLeft="@dimen/_7sdp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:text="@string/pubgsend"
        android:id="@+id/t2Dialoge" />

    <Button
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/button5"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:layout_alignParentRight="true"
        android:text="@string/done"
        android:textColor="@color/white"
        android:id="@+id/pubgDoneRequest"
        android:layout_below="@+id/t2Dialoge" />

    <Button
        android:layout_toLeftOf="@+id/pubgDoneRequest"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/button_black"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_7sdp"
        android:id="@+id/pubgCancelRequest"
        android:layout_below="@+id/t2Dialoge" />

</RelativeLayout>