<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.AZEM.diamonduc2.initialActivities.signUp"
    android:background="@color/secondry"

    android:padding="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/_190sdp"
            android:layout_height="@dimen/_190sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/gems"
            android:id="@+id/logo2" />

        <EditText
            android:layout_height="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_below="@+id/logo2"
            android:background="@drawable/button_new"
            android:id="@+id/userNameSignUpEditText"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="@dimen/_5sdp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/userNameSignUpEditText"
            android:background="@drawable/button_new"
            android:layout_marginTop="@dimen/_15sdp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:id="@+id/PhoneEmailSignUpEditText"
            android:hint="@string/phoneemail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="@dimen/_5sdp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/PhoneEmailSignUpEditText"
            android:background="@drawable/button_new"
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/password"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="@dimen/_5sdp"
            android:inputType="textPassword"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:buttonTint="@color/colorAccent"
            android:id="@+id/agreeOurPolicies"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button2"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:layout_below="@+id/password"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/signUpBtn2"
            android:layout_marginTop="@dimen/_15sdp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/signUpBtn2"
            android:fontFamily="@font/aldrich"
            android:text="OR"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:id="@+id/or"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/with"
            android:layout_below="@+id/or"
            android:layout_centerHorizontal="true"
            android:text="@string/signupwith"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_height="@dimen/_55sdp"
            android:layout_width="match_parent"
            android:layout_below="@+id/with"
            android:orientation="horizontal"
            android:id="@+id/linear2"
            android:layout_marginTop="@dimen/_5sdp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerHorizontal="true" />


            <RelativeLayout
                android:id="@+id/googleSignUp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_below="@+id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="#F1F2F2"
                android:elevation="@dimen/_3sdp"
                android:padding="@dimen/_2sdp">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/goog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="Sign up"
                    android:textColor="@color/black" />
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/logInBtn2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/button2"
            android:text="@string/haveaccount"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/_3sdp"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/_10ssp"
            android:onClick="logInFromRegisterAc" />
    </RelativeLayout>

</LinearLayout>