<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.AZEM.diamonduc2.initialActivities.login"
    android:background="@color/secondry"
    android:padding="@dimen/_5sdp"
    >


    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/gems"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/logo3" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/logo3"
        android:background="@drawable/button_new"
        android:layout_marginTop="@dimen/_15sdp"
        android:id="@+id/PhoneEmailLogInEditText"
        android:hint="@string/phoneemail"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="@dimen/_5sdp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/PhoneEmailLogInEditText"
        android:background="@drawable/button_new"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/passwordLoginEditText"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="@dimen/_5sdp"
        android:inputType="textPassword"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        android:layout_below="@+id/passwordLoginEditText"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        android:clickable="true"
        android:id="@+id/forget" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/log"
        android:textColor="@color/white"
        android:layout_below="@+id/passwordLoginEditText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/logInBtn3"
        android:layout_marginTop="@dimen/_23sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_below="@id/logInBtn3"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/aldrich"
        android:text="OR"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:id="@+id/or" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/with"
        android:layout_below="@+id/or"
        android:layout_centerHorizontal="true"
        android:text="@string/logwith"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_below="@+id/with"
        android:orientation="horizontal"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button2"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerHorizontal="true" />


        <RelativeLayout
            android:id="@+id/google1"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/login_button2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#F1F2F2"
            android:elevation="@dimen/_3sdp"
            android:padding="@dimen/_2sdp">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="match_parent"
                android:src="@drawable/goog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Sign up"
                android:textColor="@color/black" />
        </RelativeLayout>

        <!--            <com.google.android.gms.common.SignInButton-->
        <!--                android:layout_width="@dimen/_110sdp"-->
        <!--                android:layout_height="@dimen/_30sdp"-->
        <!--                android:id="@+id/googleSignUp"-->
        <!--                android:layout_toRightOf="@+id/login_button"-->
        <!--                android:layout_marginBottom="@dimen/_10sdp"-->
        <!--                />-->


    </RelativeLayout>


    <Button
        android:id="@+id/signUpBtn3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/button2"
        android:text="@string/firsttime"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginRight="@dimen/_3sdp"
        android:textSize="@dimen/_10ssp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>